# simulate-u1417748

./: .gitignore  CMakeLists.txt  PROMPT.md  README.md  RESULTS.md
docs/: STATUS.md
src/: colorize.cpp  headless_main.cpp  main.cpp  physics.cpp  physics.h  renderer.cpp  renderer.h  scene.cpp  scene.h  spatial_hash.cpp  spatial_hash.h  vec2.h
tests/: test_physics.cpp
